syntax = "proto3";

option csharp_namespace = "ClientManagement.Contract";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package clientmanagement;

// Client Management Service
service ClientService {
  // Client CRUD operations
  rpc CreateClient (CreateClientRequest) returns (CreateClientResponse);
  rpc GetClient (GetClientRequest) returns (GetClientResponse);
  rpc UpdateClient (UpdateClientRequest) returns (UpdateClientResponse);
  rpc DeleteClient (DeleteClientRequest) returns (google.protobuf.Empty);
  rpc ListClients (ListClientsRequest) returns (ListClientsResponse);
  
  // Group operations
  rpc CreateGroup (CreateGroupRequest) returns (CreateGroupResponse);
  rpc AddClientToGroup (AddClientToGroupRequest) returns (google.protobuf.Empty);
  rpc RemoveClientFromGroup (RemoveClientFromGroupRequest) returns (google.protobuf.Empty);
  
  // User assignment operations
  rpc AssignUserToClient (AssignUserToClientRequest) returns (google.protobuf.Empty);
  rpc RemoveUserFromClient (RemoveUserFromClientRequest) returns (google.protobuf.Empty);
}

// Enums
enum ClientStatus {
  CLIENT_STATUS_UNSPECIFIED = 0;
  CLIENT_STATUS_PROSPECT = 1;
  CLIENT_STATUS_ACTIVE = 2;
  CLIENT_STATUS_INACTIVE = 3;
}

enum Industry {
  INDUSTRY_UNSPECIFIED = 0;
  INDUSTRY_AGRICULTURE = 1;
  INDUSTRY_MANUFACTURING = 2;
  INDUSTRY_SERVICES = 3;
  INDUSTRY_RETAIL = 4;
  INDUSTRY_TECHNOLOGY = 5;
  INDUSTRY_FINANCE = 6;
  INDUSTRY_HEALTHCARE = 7;
  INDUSTRY_EDUCATION = 8;
  INDUSTRY_OTHER = 9;
}

// Messages
message Client {
  string id = 1;
  string tenant_id = 2;
  string company_name = 3;
  string country = 4;
  Address address = 5;
  MoroccanIdentifiers moroccan_identifiers = 6;
  Industry industry = 7;
  ContactInfo admin_contact = 8;
  ContactInfo billing_contact = 9;
  ClientStatus status = 10;
  int32 fiscal_year_end_month = 11; // 1-12
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
  repeated string user_ids = 14;
  repeated string group_ids = 15;
}

message Address {
  string street_line1 = 1;
  string street_line2 = 2;
  string city = 3;
  string state_province = 4;
  string postal_code = 5;
  string country = 6;
}

message MoroccanIdentifiers {
  string ice = 1; // Identifiant Commun de l'Entreprise
  string rc = 2;  // Registre de Commerce
  string vat_number = 3; // TVA number
  string cnss_number = 4; // CNSS affiliation number
}

message ContactInfo {
  string name = 1;
  string email = 2;
  string phone = 3;
  string title = 4;
}

message ClientGroup {
  string id = 1;
  string tenant_id = 2;
  string name = 3;
  string description = 4;
  repeated string client_ids = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message Department {
  string id = 1;
  string client_id = 2;
  string name = 3;
  string description = 4;
  repeated string team_ids = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message Team {
  string id = 1;
  string department_id = 2;
  string name = 3;
  string description = 4;
  repeated string user_ids = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// Request/Response Messages
message CreateClientRequest {
  string tenant_id = 1;
  string company_name = 2;
  string country = 3;
  Address address = 4;
  MoroccanIdentifiers moroccan_identifiers = 5;
  Industry industry = 6;
  ContactInfo admin_contact = 7;
  ContactInfo billing_contact = 8;
  ClientStatus status = 9;
  int32 fiscal_year_end_month = 10;
}

message CreateClientResponse {
  Client client = 1;
}

message GetClientRequest {
  string client_id = 1;
}

message GetClientResponse {
  Client client = 1;
}

message UpdateClientRequest {
  string client_id = 1;
  google.protobuf.StringValue company_name = 2;
  google.protobuf.StringValue country = 3;
  Address address = 4;
  MoroccanIdentifiers moroccan_identifiers = 5;
  Industry industry = 6;
  ContactInfo admin_contact = 7;
  ContactInfo billing_contact = 8;
  ClientStatus status = 9;
  google.protobuf.Int32Value fiscal_year_end_month = 10;
}

message UpdateClientResponse {
  Client client = 1;
}

message DeleteClientRequest {
  string client_id = 1;
}

message ListClientsRequest {
  int32 page_number = 1;
  int32 page_size = 2;
  string filter = 3;
  string sort_by = 4;
  bool sort_descending = 5;
}

message ListClientsResponse {
  repeated Client clients = 1;
  int32 total_count = 2;
}

message CreateGroupRequest {
  string tenant_id = 1;
  string name = 2;
  string description = 3;
}

message CreateGroupResponse {
  ClientGroup group = 1;
}

message AddClientToGroupRequest {
  string group_id = 1;
  string client_id = 2;
}

message RemoveClientFromGroupRequest {
  string group_id = 1;
  string client_id = 2;
}

message AssignUserToClientRequest {
  string client_id = 1;
  string user_id = 2;
}

message RemoveUserFromClientRequest {
  string client_id = 1;
  string user_id = 2;
}