using Grpc.Core;
using Microsoft.Extensions.Logging;

namespace ClientManagement.Api.Services;

public class ClientService : ClientManagement.ClientManagementBase
{
    private readonly ILogger<ClientService> _logger;

    public ClientService(ILogger<ClientService> logger)
    {
        _logger = logger;
    }

    public override Task<ClientResponse> GetClient(ClientRequest request, ServerCallContext context)
    {
        _logger.LogInformation("Getting client with ID: {ClientId}", request.ClientId);
        
        // TODO: Implement actual client retrieval logic
        return Task.FromResult(new ClientResponse
        {
            ClientId = request.ClientId,
            Name = "Sample Client",
            Status = "Active"
        });
    }

    public override Task<ClientListResponse> ListClients(ClientListRequest request, ServerCallContext context)
    {
        _logger.LogInformation("Listing clients for tenant: {TenantId}", request.TenantId);
        
        // TODO: Implement actual client listing logic
        var response = new ClientListResponse();
        response.Clients.Add(new ClientInfo
        {
            ClientId = "client-1",
            Name = "Client 1",
            Status = "Active"
        });
        
        return Task.FromResult(response);
    }
}